*Empty MediaWiki Message*

--- a/Ламбаське_(Отяжбуе).mw
+++ b/Ламбаське_(Отяжбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Ламбаське''' ({{Lang-ru|Лобаски}}) — эрзянь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Ламбаське''' ({{Lang-ru|Лобаски}}) — эрзянь<ref name="Моя Мордовия"/> веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 Ламбаське велесь ашти [[Нушлей]] лангсо, 28 [[вайгельпе|вп]] буенть куншка таркасто — [[Отяжвеле (Отяжбуень)|Отяжвелестэ]], 80 вп [[Саран ош]]сто.
 
@@ -69,10 +69,15 @@
 == Содавикс ломанть те велестэнть ==
 Ламбаськесэ чачсть:
 * А. Поляков — ({{Lang-ru|организатор крестьянских выступлений в Ардатовском уезде, один из руководитель Симбирского комитета партии эсеров}})  
-* В. Ф. Здуновв — Советэнь Союзонь Мараля
+* [[Здунов, Василий Фёдорович|Василий Здунов]]<ref name="Моя Мордовия">[http://mordovochka.blogspot.ru/2014/07/blog-post.html Моя Мордовия. Атяшевский район. Лобаски.]{{ref-ru}}</ref><ref name="МБОУ «ЛОБАСКИНСКАЯ СРЕДНЯЯ ШКОЛА»"/>— Советэнь Союзонь Мараля, генрал-майор
 * [[Бузакова Раиса Николаевна|Р.Н. Бузакова]] — келень-содый
 * Н.Т. Гаваев — партиянь важодиця
-* [[Кулдуркаев, Яков Яковлевич|Я.Я. Кулдуркаев]] — валморозей
+* [[Кулдуркаев, Яков Яковлевич|Я.Я. Кулдуркаев]]<ref name="МБОУ «ЛОБАСКИНСКАЯ СРЕДНЯЯ ШКОЛА»">[http://www.atlobsosh.edurm.ru/index.php?option=com_content&view=article&id=277:2014-04-30-17-45-33&catid=125:2014-04-30-16-38-18&Itemid=32 МБОУ «ЛОБАСКИНСКАЯ СРЕДНЯЯ ШКОЛА» Я.Я. Кулдыркаев]{{ref-myv}}</ref><ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/?ELEMENT_ID=904 «Национальная библиотека им. А.С. Пушкина Республики Мордовия»|«Эрьмезень» сёрмадыцянтень сюконямо: к 120-летию со дня рождения Я. Я. Кулдуркаева]{{ref-ru}}</ref>— валморозей
+
+==Веленть эрямодонть==
+2016 иень даволковсто школасо лисни  «Школань мастор» кулялопа<ref name="МБОУ «ЛОБАСКИНСКАЯ СРЕДНЯЯ ШКОЛА»"/>.
+== Сёрм.: ==
+<references />
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Л]]
