*Empty MediaWiki Message*

--- a/Кулдуркаев,_Яков_Яковлевич.mw
+++ b/Кулдуркаев,_Яков_Яковлевич.mw
@@ -25,18 +25,37 @@
 '''Кулдуркаев, Яков Яковлевич''' ([[1894]] [[ожоковонь 22 чи]] [[Ламбаське (Отяжбуень)|Ламбаське]] - [[1966]] [[медьковонь 28 чи]] [[Ламбаське (Отяжбуень)|Ламбаське]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморонь ладсий. 
 
 == Эрямозо ==
-Чачсь, Яков Яковлевич [[1894 ие]]нь [[ожоковонь 22 чи]]стэ Симбирской губерниянь Ардатовской уездэнь [[Ламбаське (Отяжбуень)|Ламбаське (Лобаски)]] велесэ (Мордовиянь республикань неень [[Отяжбуе]]cэ). 1903—1906 иетнестэ сон тонавтнесь эсь велень начальной школасо. Мейле прядызе Саранской реальной училищанть ([[1912 ие]]). Зярдо эрзятне вешнесть «паро эрямо», зярыя эсь велень ломатнень марто Яков Кулдуркаев туи Сибирев, кавто иеть важоди тосо табельщикекс [[Амурской чугункань ки]]нть лангсо. [[1915 ие]]стэ саизь армияв, косо стакасто ранязель. Пичкамодо мейле сон служась Якстере Армиясо. 1920 иестэ велявтсь чачома велев, стака контузиятнеде кувать сэредсть. Яковонь ульнесь покш бажамозо тонавтнемс, ды те мелесь курок топавтовсы 1923 иестэ сонзэ примизь [[Москов]]со счетоводонь курсас, конатнень прядомадо мейле кадсызь важдеме прявтошсо.
+Чачсь, Яков Яковлевич [[1894 ие]]нь [[ожоковонь 22 чи]]стэ Симбирской губерниянь Ардатовской уездэнь [[Ламбаське (Отяжбуень)|Ламбаське (Лобаски)]]<ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/?ELEMENT_ID=904 «Национальная библиотека им. А.С. Пушкина Республики Мордовия»|«Эрьмезень» сёрмадыцянтень сюконямо: к 120-летию со дня рождения Я. Я. Кулдуркаева]{{ref-ru}}</ref> велесэ (Мордовиянь республикань неень [[Отяжбуе]]cэ). 1903—1906 иетнестэ сон тонавтнесь эсь велень начальной школасо. Мейле прядызе Саранской реальной училищанть ([[1912 ие]]). Зярдо эрзятне вешнесть «паро эрямо», зярыя эсь велень ломатнень марто Яков Кулдуркаев туи Сибирев, кавто иеть важоди тосо табельщикекс [[Амурской чугункань ки]]нть лангсо. [[1915 ие]]стэ саизь армияв, косо стакасто ранязель. Пичкамодо мейле сон служась Якстере Армиясо. 1920 иестэ велявтсь чачома велев, стака контузиятнеде кувать сэредсть. Яковонь ульнесь покш бажамозо тонавтнемс, ды те мелесь курок топавтовсы 1923 иестэ сонзэ примизь [[Москов]]со счетоводонь курсас, конатнень прядомадо мейле кадсызь важдеме прявтошсо.
 
 Ламбаськесэ пек вечкилизь эрзянь евкстнэнь ды моротнень. Вечкилизь сынст Кулдуркаевень семиясояк. Уш вишка пингстэ Яша содась ламо евкст ды морот. Курок сонськак кармась моронь складямо. Васенце морозо тешкстазь 1910 иесэ. Творчествань тевензэ покш киява тусть, ансяк зярдо понгсь Московов ды сонзэ талантонтень фатясть тосо эриця эрзянь сёрмадейтне [[Глухов, Петр Семенович|П.С. Глухов]], [[Чесноковонь, Фёдор Маркелович|Фёдор Чесноков]] ды [[Моро, Артур|Артур Моро]]. Сынст мельтнень коряс од валморсёрмадеесь кармась важодеме эпической покш произ­ведения лангсо. 1928 иестэ «Якстере теште» кулялопань ожоковонь колмо номертнэсэ лиссть «Эрьмезь ды Котова» сонзэ поэмасто саевкстнэ.
 
+«Эрьмезь» поэмась (авторось лемдизе кезэрень эрямодо ёвксокс) башка книгасо нолдазель  ульнесь [[1935 ие]]стэ ды сон те шкас эзизе емавто художественной питнейчинзэ. Эрзянь литературасо «Эрьмезенть» кондямо мазый, сюпав, домка сёрмадовкс арась. Сонзэ эйсэ весе вийсэ гайгезевсь [[эрзянь кель|эрзянь келесь]], конань мазычизэ пурьгине чирькень тюссо цитни эрьва валсто. «Эрьмезенть» ловномсто маряви, теке симат вирень лисьмапрясто: а ёвтавикс танстесь копордавксонь копордавкс валови эзгат, тон яла симат ды кодаяк а пештеват!
+
+[[Моро Артур|Артур Моро]] «Яни Кулдуркаевнень» валморосонть «Эрьмезень» сёрмадыцянть невтизе покштояк покш эрзянь валморозеекс. Ды уш сестэ весе арсесть: минек поэзияс лиссь валдо, покш теште. Видеяк, лисекшнэсь алкуксонь теште, — ансяк сельмень сявадыцятне, раужо ойме ломантне путсть ламо вийть сонзэ мадстемга. Сынь сёрмалесть авторонть лангс эрьва кодат кенгелемат, ловизь «Эрьмезенть» националистической произведениякс. Неть сёрматнень-кенгелематнень коряс [[1938 ие]]нь [[таштамков]]сто МВД-нь «башка совещаниясь» Я.Я.Кулдыркаевень пекставтызе тюрьмас. Тюрьматнесэ, лагертнесэ сонзэ пек чавсть — истя кармавсть лавгамо, кенгелеме эсензэ ды сонзэ ялганзо лангс. Тень кувалма шумбрачизэ пек беряньгадсь, памятеззяк лавшомгадокшнось.
+
+Кода мейле карминек содамо, «Эрьмезень» авторось кирдевсь Коми АССР-нь, седе мейле Новгородской, Джамбульской областень лагертнесэ. Малавиксэнзэ туртов кучнось тосто зярыя сёрмат. Ёвтнесь — эри пек беряньстэ, ярсамс а мезде, энялдсь лездамс. Мик лагерьсэяк Я.Я.Кулдыркаев мукшнось шка сёрмадомсь. Роднянзо-малавиксэнзэ туртов сон сёрмасо кучнось литературной произведеният, энялдсь печатавтомс эрзянь изданиятнесэ. Нама, те киненьгак эзь тееве.
+
+Олякстомась пачкодсь тензэ ансяк [[1958 ие]]нь ацамковсто. Комсь иень ютазь эрзянь валморозееньтень ёвтасть: сон, келя, лагерьсэ аштесь чумовтомо. Зярдо Я.Я.Кулдыркаевень нолдызь лагерьстэ – лиссь истя, кадовсь ськамонзо… Яков Яковлевич сась Ламбаськев. Сонзэ нолдызе эсензэ кудос Михаил Горев атясь, кона эрясь ськамонзо.
+
+Содатано сёрмань  кучомодонзо С.Николаевнень — Мордовской АССР-нь Верховной Советэнь Президиумонь се шкань прявтонтень — веледе од произведениянь сёрмадома ды чачома таркасо эрямодо мельдензэ. Теке сёрмасонть сон вешсь лезкс тензэ кудонь путомасо. Кудось тензэ эзь стявтово сэредеманзо кувалма. Алкукскак, сестэ сон сэредсь истя пек, натой превензэяк човоргалильть. Меельце эрямо иезэ ютась пек стакасто, васоло роднятнень кудова яксезь. Ламо шка Я. Я. Кулдуркаевютавтсь пенсиянь хлопочамонтень. Козловской райсобесэсь яла вешсь пельдензэ справкат, зярдо ды кодамо ла­герьсэ роботась. Арази сеть иетнестэ муевильть истят документт?!
+
+«Эрьмезде» башка  Яков Кулдыркаевень лиссь поэмазо «Андямо», эйкакштнэнень ёвксонзо «Якстере цеця»ды «Ёжов сенксь».
 
 Кулось [[1966]] иесте [[медьковонь 28 чи]]стэ, калмазь [[Ламбаське (Отяжбуень)|Ламбаськесэ]].
+
+Репрессировазь писательтнеде кармасть кортамо аволь пек умок. Седе икеле сындест содасть ансяк- ученойтне, литературоведтнэ ды писательтне. Ней, кода кортыть, вармась полавтызе ёнксонзо. Я.Я. Кулдуркаевень сёрмадовксонзо совавтызь тонавтнемань программас, «Масторава» вейсэндявксось тешкстызе поэтэнть чачома чинзэ. Вейксэнгеменце иетнестэ Саранскойстэ Ламбаськев сакшность ламо ннжеть. Ютксост ульнесть культурань министрась Ю.Ф. Юшкин, «Масторава» вейсэндявксонть прявтось Н.И. Чиняев, ученойть, сёрмадейть. Сынь Я.Я. Кулдуркаевень калмонзо лангс путсть од крест, каштазт.
+
+Мейле ютавтозель покш промкс, кона алтазель поэтэнть Яков Яковлевич Кулдур­каевень лемс. 2014-це иень ожоковонь 22-чистэ сонензэ топодсть 120 иеть.
 
 == Шкинеманзо ==
 * «Эрьмезь» поэмась (авторось лемдизе кезэрень эрямодо ёвксокс) башка пусмосо нолдазель 1935 иестэ.
 
+== Ванмо ==
+* [https://www.youtube.com/watch?v=-toODhlG_NE  «Я. Я. Кулдыркаевень эрямонь ды шкинемань кизэ» 121 иеть чачома чистэнзэ (ванмо)]
 
-== Сёрм. ==
+== Сёрм.: ==
+<references />
+
 
 [[Category:Эрзянь Ине ломанть|К]]
 [[Category:Эрзянь сёрмадейть|К]]
