*Empty MediaWiki Message*

--- a/Кулдуркаев,_Яков_Яковлевич.mw
+++ b/Кулдуркаев,_Яков_Яковлевич.mw
@@ -47,6 +47,8 @@
 
 Мейле ютавтозель покш промкс, кона алтазель поэтэнть Яков Яковлевич Кулдур­каевень лемс. 2014-це иень ожоковонь 22-чистэ сонензэ топодсть 120 иеть.
 
+[[2008 ие]]стэ ульнесь  нолдазь «Поэмат ды ёвкст» пурнавксозо.
+
 == Шкинеманзо ==
 * «Эрьмезь» поэмась (авторось лемдизе кезэрень эрямодо ёвксокс) башка пусмосо нолдазель 1935 иестэ.
 
