*Empty MediaWiki Message*

--- a/Эрьмезь_(морокерькс).mw
+++ b/Эрьмезь_(морокерькс).mw
@@ -1,6 +1,20 @@
 {{Лия смустьтне|Эрьмезь (смустьтне)}}
 
-'''«Эрьмезь» морокерькс''' — те  [[Эрзя|эрзянь раськень]] поэма морокерькс, конань пурнызе [[Кулдуркаев, Яков Яковлевич|Яков Кулдуркаев]].
+'''«Эрьмезь» морокерькс''' — те  [[Эрзя|эрзянь раськень]] поэма морокерькс, конань пурнызе [[Кулдуркаев, Яков Яковлевич|Яков Кулдуркаев]]<ref name="МБОУ «ЛОБАСКИНСКАЯ СРЕДНЯЯ ШКОЛА»">[http://www.atlobsosh.edurm.ru/index.php?option=com_content&view=article&id=428:2015-11-10-10-35-32&catid=165:2015-10-24-15-06-17&Itemid=46 МБОУ «ЛОБАСКИНСКАЯ СРЕДНЯЯ ШКОЛА» ПОКШЧИ. Я. Я. Кулдыркаевень эрямонь ды шкинемань кизэ]{{ref-myv}}</ref>. [[1928 ие]]стэ [[«Эрзянь правда» (кулялопа)|«Якстере теште» кулялопань]] [[ожоков]]онь колмо номертнэсэ лиссть «Эрьмезь ды Котова» морокерькстэ саевкстнэ. Сонсь «Эрьмезь» морокерьксэсь башка книгасо нолдазель ульнесь ансяк [[1935 ие]]стэ. 
+
+==Мездэ морокерьксэсь==
+[[Эрьмезь (лем)|Эрьмезесь]] — эрзянь раськень прявтонь цёра. Котова - [[мокшот|мокшонь раськень]] прявтонь тейтерь. Сынь псистэ вечкить. Тетятнень-аватнень арась мелеет теемс свадьба. Од ломантне эзизь кунсоло сынст, венчасть салава. Кавто плематнень састь кежест вейке-вейке лангс.
+
+Те шкасто эрзятнень лангс каявсть ордатне. Вийтне ульнесть аволь вейкеть. Ламо верь валсть эрзятне. Мокшонь првтось жо эзь са лездамо эрзятненень. Те тюремасонть чавови Эрьмезь. Сон тееви [[кев]]екс. Эрямостонть туи Котоваяк. Тейте­ресь кевенть вакс кассь [[ашо]] [[килей|килеекс]]. Ванна истямо поэманть сюжетэзэ.
+
+Тесэ Эрьмезь ды Котова ловныцятнень икелев стить весе сэрьсэ. Васняяк, неяви сынст мазычист, валдо оймест ды чевте седеест. Эрьмезь [[Чи-ве|чинек-венек]] важодсь. Сон тейсь [[ведьгев]]ть, [[венч]]ть ды кузницясо лия тевть. Зярдо [[Сура лей|Суранть]] чирестэ неизе мок­шонь тейтеренть, сон сеске кармась вечкемензэ ды арсесь саемс никс. Котовань тетязо Пурейша мерсь, ансяк сестэ тейтерензэ макссы цёрантень никс, бути сон муи карень кодыця цёканьзюро. Эрьмезнень кармась лездамо [[Вирява|вирень ава]]. Сон церанть ветизе тусто [[вирь|вирев]] ды невтизе кинть, кона ветясь ялаксонзо эрямонь таркантень. Ялаксозо ульнесь вирень ведун. Эрьмезь кедьсэнзэ кармась важодеме кшисускомонь кисэ. Эрьмезь лиссь изницякс.
+
+Поэмасонть ламо тевтне теевить кода волшебной ёвкстнэсэ. Истя, кудов самсто Эрьмезь вастови Дыдай ракшань ваныцянть марта. Сон эрзянь цёрантень казсь вол­шебной локшо, кона лездась ятнэнь каршо тюремстэ. Ансяк вана Эрьмезь ёмавтсы локшонть ды сонзэ изнясызь верень потийтне.
+
+Я.Я. Кулдуркаев поэмасонзо келейстэ панжи эрзятнень чевте оймест, валдо седеест. Тень сон парсте невтизе Эрьмезень обуцянть вельде. Эрзятне эрясть вирьсэ, парсте содылизь таркатнень, тюрсть эсест олячист кис.
+
+== Сёрм.: ==
+<references />
 
 [[Category:Мифология|Э]]
 [[Category:Эрзянь сёрмадоматев|Э]]
