*Empty MediaWiki Message*

--- a/Кулдуркаев,_Яков_Яковлевич.mw
+++ b/Кулдуркаев,_Яков_Яковлевич.mw
@@ -31,6 +31,11 @@
 
 «Эрьмезь» поэмась (авторось лемдизе кезэрень эрямодо ёвксокс) башка книгасо нолдазель  ульнесь [[1935 ие]]стэ ды сон те шкас эзизе емавто художественной питнейчинзэ. Эрзянь литературасо «Эрьмезенть» кондямо мазый, сюпав, домка сёрмадовкс арась. Сонзэ эйсэ весе вийсэ гайгезевсь [[эрзянь кель|эрзянь келесь]], конань мазычизэ пурьгине чирькень тюссо цитни эрьва валсто. «Эрьмезенть» ловномсто маряви, теке симат вирень лисьмапрясто: а ёвтавикс танстесь копордавксонь копордавкс валови эзгат, тон яла симат ды кодаяк а пештеват!
 
+А. М. Моро вана мезэ ёвтась<ref name="VIII съезд">Выступление на VIII съезде писателей Мордовии. 23 апреля 1971</ref>: 
+{{Цитатань ушодома}} ({{Lang-myv|30-це иетнестэ ульнесь сёрмадозь гениальной «Эрьмезь» морокерьксэсь, конань эрявиксэсь ды питнезэ эрзянь раськеньте путови «Словом о полку Игореве» рузонь раськеньте...}}
+{{oq|ru|«В тридцатые годы была создана гениальная поэма Я. Я. Кулдуркаева «Эрьмезь», которую по значимости для эрзянского народа можно сравнить только со «Словом о полку Игореве» для русского народа. Эта поэма стала сияющей вершиной мордовской поэзии и всей литературы и служит большим вкладом в сокровищницу мировой поэзии…»}}
+{{Цитатань пе}}
+
 [[Моро Артур|Артур Моро]] «Яни Кулдуркаевнень» валморосонть «Эрьмезень» сёрмадыцянть невтизе покштояк покш эрзянь валморозеекс. Ды уш сестэ весе арсесть: минек поэзияс лиссь валдо, покш теште. Видеяк, лисекшнэсь алкуксонь теште, — ансяк сельмень сявадыцятне, раужо ойме ломантне путсть ламо вийть сонзэ мадстемга. Сынь сёрмалесть авторонть лангс эрьва кодат кенгелемат, ловизь «Эрьмезенть» националистической произведениякс. Неть сёрматнень-кенгелематнень коряс [[1938 ие]]нь [[таштамков]]сто МВД-нь «башка совещаниясь» Я.Я.Кулдыркаевень пекставтызе тюрьмас. Тюрьматнесэ, лагертнесэ сонзэ пек чавсть — истя кармавсть лавгамо, кенгелеме эсензэ ды сонзэ ялганзо лангс. Тень кувалма шумбрачизэ пек беряньгадсь, памятеззяк лавшомгадокшнось.
 
 Кода мейле карминек содамо, «Эрьмезень» авторось кирдевсь Коми АССР-нь, седе мейле Новгородской, Джамбульской областень лагертнесэ. Малавиксэнзэ туртов кучнось тосто зярыя сёрмат. Ёвтнесь — эри пек беряньстэ, ярсамс а мезде, энялдсь лездамс. Мик лагерьсэяк Я.Я.Кулдыркаев мукшнось шка сёрмадомсь. Роднянзо-малавиксэнзэ туртов сон сёрмасо кучнось литературной произведеният, энялдсь печатавтомс эрзянь изданиятнесэ. Нама, те киненьгак эзь тееве.
