*Empty MediaWiki Message*

--- a/Таразбие_(Отяжбуе).mw
+++ b/Таразбие_(Отяжбуе).mw
@@ -31,7 +31,7 @@
  |внутреннее деление      = 
  |вид главы               = велень прявт
  |глава                   =
- |дата основания          =   XVII пингенть ушодомсто
+ |дата основания          =   XVII пинге{{!}}XVII пингенть ушодомсто
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 
