/* Содавикс ломанть те велестэнть */

--- a/Таразбие_(Отяжбуе).mw
+++ b/Таразбие_(Отяжбуе).mw
@@ -73,7 +73,7 @@
 == Содавикс ломанть те велестэнть ==
 Таразбиесэ чачсть:
 * А.М. Живаев, П.С. Шилов, Л.И. Мойсеева — хозяйствань прявтт
-* Т.Д. Абрамова, Ю.Г. Мойсеев — заслуженной важодицят велень-хозяйствань [[Мордовия]]со
+* Т.Д. Абрамова, Ю.Г. Мойсеев — [[Мордовия]]нь заслуженной велень-хозяйствань важодицят 
 * Н.Ф. Атласов —  инженер
 * А.А. Мойсеев — к. в.хоз. н.
 * [[Атласова Анна|А.Г. Атласова]]<ref name="«Велесь течи»">[https://www.youtube.com/watch?v=qlgVOMBCkBs ТелеСеть Мордовии (10 канал): «Велесь течи» Таразбуесэ]{{ref-myv}}</ref>— Мордовиянь заслуженной артистка, морыця
