*Empty MediaWiki Message*

--- a/Гайни_Пётр.mw
+++ b/Гайни_Пётр.mw
@@ -26,7 +26,10 @@
 
 Чачсь [[1910 ие]]нь [[таштамковонь 6 чи]]стэ [[Алоошонь ёнкс|Алоошонь ёнксонь]] [[Лугаян буе]]нь [[Салманьбиё (Лугаян буе)|Салманьбиё]] велесэ. Горьковской рабфаконть прядомадо мейле сась [[Мордовия]]в. Васня важодсь [[Кочкур веле (Кочкур буе)|Кочкурвеле]]сэ — «Якстере колхоз» буенькулялопасо, мейле тонавтсь [[эрзянь кель]] ды литература Кемлянь вельхозтехникумсо [[Ицял буе|Ицялбуесэ]]. 
 
-Ине Оте­чественной войнань шкасто валморозеесь ульнесь «Советский воин» фронтовой кулялопань спецкорокс, танково-десантной ротань командирэкс. Казезь Якстере Тештень ды Отечественной вой­нань 1-це степенень ордентнэсэ. Кудов велявтсь инвалидэкс. Войнадо мейле важодсь Мордкизсэ, радиокомитетсэ, [[«Эрзянь правда» (кулялопа)|«Эрзянь правда» кулялопанть]] редакциясо, сёрмалесь [[Сятко (журнал-ковставкс)|«Сятко»]]. 
+Ине Оте­чественной войнань шкасто валморозеесь ульнесь «Советский воин» фронтовой кулялопань спецкорокс, танково-десантной ротань командирэкс. Казезь Якстере Тештень ды Отечественной вой­нань 1-це степенень ордентнэсэ. 
+П.Гайнинь войнань шкань валморонзо пешксеть эрямонь пси ойме коштсо, сынь лездасть тапамс ятонть. Валморсёрмаденть лириканзо лаказь лакась алкуксонь седей лембесэ, изнямонтень кемемасо.  
+Кудов велявтсь инвалидэкс. Войнадо мейле важодсь Мордкизсэ, радиокомитетсэ, [[«Эрзянь правда» (кулялопа)|«Эрзянь правда» кулялопанть]] редакциясо, сёрмалесь [[Сятко (журнал-ковставкс)|«Сятко»]]. 
+Вишкине ловныцятьненень Гайни эрзянь кельс ютавтокшнызе «Конёк-Горбунок» Ершовонь ёвксонть.
 == Сёрмадовксонзо ==
 Васенце валморозо «Кизэнь чи» ({{lang-ru|«Летний день»}}) лиси 1932 иестэ лугоянонь «Вейсэнь эрямо» ({{lang-ru|«Коллективная жизнь»}}) кулялопасонть. Васенце валморонь пусмозо Гайнинь «Гайгек, вайгель» ({{lang-ru|«Звени, голос»}}) лись 1933 иестэ. 1935 иестэ лись омбоцесь  «Уцяска» ({{lang-ru|«Счастье»}}), ков совавтозь ульнесь васенце поэмазо  «Кавто уцяскат» ({{lang-ru|«Два счастья»}}).
 
