--- a/Вараканьбал.mw
+++ b/Вараканьбал.mw
@@ -4,8 +4,7 @@
 Лопазо аштить [[3 (ловома вал)|колмо]] лопинестэ, вейс касозь. Вишкине цецянзо пурназь вейке шаронь кондямо пряс. Цецянзо тантейстэ качадыть, бордовой тюсонь. Вараканьбалось кассы луга лангсо эли сонзэ виднить паксяс. Сон ловови вадря кормокс ды ормадо лезэв тикшекс. Кочкить тикшенть [[якстере]] прянзо.  Теить эйстэнзэ чай, симить козомсто, экшендемстэ. Мекшетне саить  медярво.
 
 == Тикшень лемтне == 
-[[Отяжбуе|Отяжбуень]] [[Ламбаське (Отяжбуень)|Ламбаське]],  [[Тазвеле (Отяжбуень)|Тазале]] велетнесэ  мерить тензэ '''''поцемка'''''. Сонзэ цецятнень песэ ламбамо ведь.  [[Тумобуе|Тумобуень]] Кобалесэ мерить '''''чавканька'''''. [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''чавканьбал'''''. [[Алоошонь ёнкс|Алоёнксонь]] Лугаянбуесэ Иваньбие велесэ – '''''чавканьбал'''''. Орданьбуе Орданьбуе велесэ – '''''чавкаьбря'''''. [[Ветькень Республикась|Ветькень Масторонь]] Порецкой буень Напольное велесэ мерить '''''варсейбал'''''. Кой-косо мерить '''''керяз тикше'''''. 
-
+[[Отяжбуе|Отяжбуень]] [[Ламбаське (Отяжбуень)|Ламбаське]],  [[Тазвеле (Отяжбуень)|Тазале]] велетнесэ  мерить тензэ '''''поцемка'''''. Сонзэ цецятнень песэ ламбамо ведь.  [[Тумобуе|Тумобуень]] Кобалесэ мерить '''''чавканька'''''. [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''чавканьбал'''''. [[Алоошонь ёнкс|Алоёнксонь]] Лугаянбуесэ Иваньбие велесэ – '''''чавканьбал'''''. Орданьбуе Орданьбуе велесэ – '''''чавкаьбря'''''. [[Ветькень Республикась|Ветькень Масторонь]] Порецкой буень Напольное велесэ мерить '''''варсейбал'''''. Кой-косо мерить '''''керяз тикше'''''. [[Самара ёнкс]]о [[Клявля]]со  – '''''чавкань тикше''''' (čavkan’ t’ikše)<ref name="Гребнева">Гребнева, А. М. Мордовские фитонимы в системе семантического поля / А. М. Гребнева // интеграция образования. – 2015. – т. 19, No 4. – С. 100–106. dOi: 10.15507/1991- 9468.081.019.201504.100 {{ref-mdf}},{{ref-ru}},{{ref-myv}}</ref>.
 
 == Сёрм.: ==
 * Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 
