/* Кода лиякс мерить */

--- a/Лёмзёркс.mw
+++ b/Лёмзёркс.mw
@@ -45,7 +45,7 @@
 == Кода лиякс мерить ==
 * Демина — [[Покш Игнадбуе|Покш Игнадбуень]] Ташто Селища велесэ.
 * Ламарина — [[Тумобуе|Тумобуень]] Кочкурвелесэ, [[Отяжбуе|Отяжбуень]] Кулясовань велесэ.
-* Ламарь — [[Отяжбуе|Отяжбуень]] Дюрька велесэ, Ботужвелесэ.
+* Ламарь — [[Отяжбуе|Отяжбуень]] [[Дюрькина (Отяжбуе)|Дюрька велесэ]], Ботужвелесэ.
 * Лёмзёр сад — [[Самар ёнкс|Куйбышень ёнкссо]] Якстереармиянь буень Кевень Брод велесэ.
 * Лёмзёр ундо — [[Покш Игнадбуе|Покш Игнадбуень]] Вармазей велесэ.
 * Лемкс — [[Покш Килейбуе|Покш Килейбуень]] Шугурвелесэ.
