--- a/Карвотикше.mw
+++ b/Карвотикше.mw
@@ -1,4 +1,10 @@
 [[Артовкс:Origanum vulgare - harilik pune.jpg|thumb|Карвотикше]]
 '''Ка́рвотикше''' (лат. ''Origanum vulgare'', {{Lang-ru|Душица обыкновенная}}) — те тикше яснотковонь (Lamiaceae) семиястонть.
 
+== Тикшень лемтне == 
+[[Отяжбуе|Отяжбуень]] [[Дюрькина (Отяжбуе)|Дюрька велесэ]] - '''''чай тикше''''' (čaj t’ikše)<ref name="Гребнева"/>, [[Орозбие (Орданьбуе)|Орозбиесэ]] - '''''серобой''''' (s’eroboj)<ref name="Гребнева"/>, [[Самара ёнкс]]о [[Клявля]]со  – '''''сирабой''''' (s’iraboj)<ref name="Гребнева">Гребнева, А. М. Мордовские фитонимы в системе семантического поля / А. М. Гребнева // интеграция образования. – 2015. – т. 19, No 4. – С. 100–106. dOi: 10.15507/1991- 9468.081.019.201504.100 {{ref-mdf}},{{ref-ru}},{{ref-myv}}</ref>
+== Сёрм.: ==
+<references />
+
+
 [[Категория:Тикшеть]]
