*Empty MediaWiki Message*

--- a/Вараканьбал.mw
+++ b/Вараканьбал.mw
@@ -4,7 +4,17 @@
 Лопазо аштить [[3 (ловома вал)|колмо]] лопинестэ, вейс касозь. Вишкине цецянзо пурназь вейке шаронь кондямо пряс. Цецянзо тантейстэ качадыть, бордовой тюсонь. Вараканьбалось кассы луга лангсо эли сонзэ виднить паксяс. Сон ловови вадря кормокс ды ормадо лезэв тикшекс. Кочкить тикшенть [[якстере]] прянзо.  Теить эйстэнзэ чай, симить козомсто, экшендемстэ. Мекшетне саить  медярво.
 
 == Тикшень лемтне == 
-[[Отяжбуе|Отяжбуень]] [[Ламбаське (Отяжбуень)|Ламбаське]],  [[Тазвеле (Отяжбуень)|Тазале]] велетнесэ  мерить тензэ '''''поцемка'''''. Сонзэ цецятнень песэ ламбамо ведь.  [[Тумобуе|Тумобуень]] Кобалесэ мерить '''''чавканька'''''. [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''чавканьбал'''''. [[Алоошонь ёнкс|Алоёнксонь]] Лугаянбуесэ Иваньбие велесэ – '''''чавканьбал'''''. Орданьбуе Орданьбуе велесэ – '''''чавкаьбря'''''. [[Ветькень Республикась|Ветькень Масторонь]] Порецкой буень Напольное велесэ мерить '''''варсейбал'''''. Кой-косо мерить '''''керяз тикше'''''. [[Самара ёнкс]]о [[Клявля]]со  – '''''чавкань тикше''''' (čavkan’ t’ikše)<ref name="Гребнева">Гребнева, А. М. Мордовские фитонимы в системе семантического поля / А. М. Гребнева // интеграция образования. – 2015. – т. 19, No 4. – С. 100–106. dOi: 10.15507/1991- 9468.081.019.201504.100 {{ref-mdf}},{{ref-ru}},{{ref-myv}}</ref>.
+* [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ, [[Алоошонь ёнкс|Нижней ёнксонь]] [[Лугаян буе]]сэ [[Иваньбиё (Лугаян буе)|Иваньбиёсо]], [[Поводвеле (Тумобуе)|Поводвелесэ]]<ref name="Гребнева"/> – '''''чавканьбал''''' (čavkan’bal). 
+* [[Самара ёнкс]]о [[Клявля]]со  – '''''чавкань тикше''''' (čavkan’ t’ikše)<ref name="Гребнева">Гребнева, А. М. Мордовские фитонимы в системе семантического поля / А. М. Гребнева // интеграция образования. – 2015. – т. 19, No 4. – С. 100–106. dOi: 10.15507/1991- 9468.081.019.201504.100 {{ref-mdf}},{{ref-ru}},{{ref-myv}}</ref>
+* [[Тумобуе|Тумобуень]] [[Кобале (Тумобуе)|Кобалесэ]] - '''''чавканька'''''
+* Орданьбуень Орданьбуе велесэ, [[Мокшалей (Чаунзабуе)|Мокшалейсэ]]<ref name="Гребнева"/> – '''''чавканьбря'''''  
+* [[Отяжбуе|Отяжбуень]] [[Ламбаське (Отяжбуень)|Ламбаське]] - '''''поцимка''''' (poc’imka)<ref name="Гребнева"/>, [[Тазвеле (Отяжбуень)|Тазале]] - '''''поцемка''''' (poс’emkaj)<ref name="Гребнева"/>. Сонзэ цецятнень песэ ламбамо ведь.  
+* [[Ицял буе]]нь [[Полдаська (Ицял буе)|Полдаська]], [[Пардэле (Ицял буе)|Пардэле]], [[Сакулька (Ицял буе)|Сакулька]], [[Селища (Ицял буе)|Селища]] велтнесэ мерить - '''''якстере поцемка тикше''''' (jaks’t’er’e poc’emka t’ikše)<ref name="Гребнева"/>.
+* [[Ицяло (Ицял буе)|Ицялосо]] мерить - '''''клевер''''' (kl’ever)<ref name="Гребнева"/>.
+* [[Тумобуе]]нь [[Орданьбуе (Тумобуе)|Орданьбуе]]сэ мерить - '''''керязь дикше''''' (ker’az’ d’ikše)<ref name="Гребнева"/>.
+* [[Ветькень Республикась|Ветькень Масторонь]] Порецкой буень Напольное велесэ мерить '''''варсейбал'''''. 
+*  Кой-косо мерить '''''керяз тикше'''''. 
+
 
 == Сёрм.: ==
 * Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 
