*Empty MediaWiki Message*

--- a/Вараканьбал.mw
+++ b/Вараканьбал.mw
@@ -17,7 +17,7 @@
 
 
 == Сёрм.: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 
-
+*  Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 
+<references />
 [[Category:Тикшеть|В]]
 [[Category:Ормадо лезэвть|В]]
