*Empty MediaWiki Message*

--- a/Азарць_тикше.mw
+++ b/Азарць_тикше.mw
@@ -9,11 +9,16 @@
 Эмежезэ - вельтемне марто кукшуннэнь кондямо коробкине-куйме, улить пейнензэ, конат кенерема малав кармить пупамо. Азарць тикшень мазый куйметнесэ налкстнить эйкакшт ды ярсакшныть сынст маконь кондят видьмест, конань эйсэ мейле пек морявкшныть, [[Эрзянь кель|эрзякс]] мерить ''азаргадыть'' — те тикшесь куловтыця: лопанзояк, цецянзояк, недьксэнзэяк.
 
 == Тикшень лемтне ==
-Азарць тикшентень кой-косо мерить '''''дурак тикше'''''.
+* Азарць тикшентень [[эрзянь кель|эрзянь литературной кельсэнть]] мерить '''''дурак тикше<ref name="Гребнева">Гребнева, А. М. Мордовские фитонимы в системе семантического поля / А. М. Гребнева // интеграция образования. – 2015. – т. 19, No 4. – С. 100–106. dOi: 10.15507/1991- 9468.081.019.201504.100 {{ref-mdf}},{{ref-ru}},{{ref-myv}}</ref>'''''.
+* [[Шугур веле (Покш Килейбуе)|Шугур велесэ]]  – '''''дурак мако''''' (durak mako)<ref name="Гребнева"/>.
+* [[Селища (Ицял буе)|Селища]]  – '''''дурак бабань тикше''''' (durak baban’ t’ikše)<ref name="Гребнева"/>.
+* [[Ицяло (Ицял буе)|Ицялосо]] мерить - '''''овтонь беште''''' (ovton’ bešt’e)<ref name="Гребнева"/>.
+* [[Ало веле (Отяжбуе)|Ало велесэ]] мерить - '''''дикой мако''''' (d’ikoj mako)<ref name="Гребнева"/>.
+* [[Кулясова (Камешкир буе)|Кулясова]] мерить - '''''саразонь гулофтома''''' (sarazon’ guloftoma)<ref name="Гребнева"/>.
 
 == Сёрм.: ==
 * Пурнадо лекарствань тикшеть А.Ф. Терехов, Равкуншкань краень Государственной Издательствась, Москов-Самар 1932, л.40
-
+<references />
 {{stub}}
 
 [[Категория:Тикшеть|А]]
