*Empty MediaWiki Message*

--- a/Ведьбарсей.mw
+++ b/Ведьбарсей.mw
@@ -2,6 +2,14 @@
 '''Ведьбарсей''' (лат. ''Algae'') — те спорасо раштыця тикшеть. Сехте алсе классонь. Касыть ведьсэ. Цецяст ды видьмест арасть, арасть лопастгак, недьксэстгак. Улить ведьбарсейть [[пиже]]ть, сэньшть мериця пижеть, одола-пижеть, [[якстере]]ть. Пижетнестэ, паряк, теевить мода лангонь пиже тикшетне. 
 
 == Тикшень лемтне ==
-[[Отяжбуе|Отяжбуень]] Ламбаське велесэ мерить тензэ '''''ведьнулко'''''.
+* [[Отяжбуе|Отяжбуень]] Ламбаське велесэ мерить тензэ '''''ведьнулко'''''.
+* [[Отяжбуе|Отяжбуень]] [[Дюрькина (Отяжбуе)|Дюрька]] ды [[Ало веле (Отяжбуе)|Ало]] велетнесэ мерить – '''''ведь нулко''''' (ved’ nulke)<ref name="Гребнева">Гребнева, А. М. Мордовские фитонимы в системе семантического поля / А. М. Гребнева // интеграция образования. – 2015. – т. 19, No 4. – С. 100–106. dOi: 10.15507/1991- 9468.081.019.201504.100 {{ref-mdf}},{{ref-ru}},{{ref-myv}}</ref>.
+* [[Ицял буе]]нь [[Полдаська (Ицял буе)|Полдаська]] велесэ мерить – '''''ватракшонь паця''''' (vatrakšun’ рас’а)<ref name="Гребнева"/>.
+* [[Ицял буе]]нь [[Сакулька (Ицял буе)|Сакулька]] велесэ – '''''лягай лопа''''' (l’agaj lopa)<ref name="Гребнева"/>.
+* [[Ицял буе]]нь [[Селища (Ицял буе)|Селища]] велесэ – '''''нулко''''' (nulko)<ref name="Гребнева"/>.
+* [[Ицял буе]]нь [[Пардэле (Ицял буе)|Пардэле]] велесэ – '''''пиже чекарь''''' (piže čekar’)<ref name="Гребнева"/>.
+
+== Сёрм.: ==
+<references />
 
 [[Категория:Тикшеть|В]]
