*Empty MediaWiki Message*

--- a/Боза_тикше.mw
+++ b/Боза_тикше.mw
@@ -4,10 +4,13 @@
 Нетьксэсь кассы серейстэ, лопанзо керсевезь. Цецянзо фиолетовойть, пурнавозь зонт ладсо. Кассы летьке [[мода|модасо]], [[ведь]] чирева. Надобиякс моли ундоксозо, сон максы сэредицянтень оймамо, сэтьмечи. 
 
 == Тикшень лемтне ==
-Тикшень лемесь муезь [[Ульянонь ёнкс|Ульянонь ёнкссо]] [[Николаень буе|Николаень буень]] Мордовский Канадей ды Дубровка велетнесэ.
+* Тикшень лемесь муезь [[Ульянонь ёнкс|Ульянонь ёнкссо]] [[Николаень буе|Николаень буень]] Мордовский Канадей ды Дубровка велетнесэ.
+* '''''шумбрачинь максыця ормаменъксэнъ тикше''''', '''''ормаменъксэнъ каткамав тикше'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5—7493—0433—7.,{{ref-ru}},{{ref-myv}}</ref>
+
 
 == Сёрм.: ==
 * Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
+<references />
 
 [[Категория:Тикшеть|Б]]
 [[Категория:Ормадо лезэвть|Б]]
