*Empty MediaWiki Message*

--- a/Боза_тикше.mw
+++ b/Боза_тикше.mw
@@ -5,7 +5,7 @@
 
 == Тикшень лемтне ==
 * Тикшень лемесь муезь [[Ульянонь ёнкс|Ульянонь ёнкссо]] [[Николаень буе|Николаень буень]] Мордовский Канадей ды Дубровка велетнесэ.
-* '''''шумбрачинь максыця ормаменъксэнъ тикше''''', '''''ормаменъксэнъ каткамав тикше'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5—7493—0433—7.,{{ref-ru}},{{ref-myv}}</ref>
+* '''''шумбрачинь максыця ормаменъксэнъ тикше''''', '''''ормаменъксэнъ каткамав тикше'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5—7493—0433—7.,{{ref-ru}},{{ref-myv}}</ref>.
 
 
 == Сёрм.: ==
