*Empty MediaWiki Message*

--- a/А_пидиця_ашо_пиципалакс.mw
+++ b/А_пидиця_ашо_пиципалакс.mw
@@ -39,16 +39,24 @@
 | grin             = 
 | ipni              = 
 }}
-'''А пидиця ашо пиципалакс''' ({{Lang-lat|Lámium álbum}}, {{lang-ru| ''Ясно́тка бе́лая'', эли ''глуха́я крапи́ва ''}}) — ламо иень перть касыця [[тикше]], губоцветноень семиянь  (Labiatae). 
+'''А пидиця ашо пиципалакс<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-lat|Lámium álbum}}, {{lang-ru| ''Ясно́тка бе́лая'', эли ''глуха́я крапи́ва ''}}) — ламо иень перть касыця [[тикше]], губоцветноень семиянь  (Labiatae). 
 
 Нетьксэзэ виде, аламодо понав. Лопанзо пиципалакс (Urtica) лопатнень ёнов молицят. Цвети ашосто эли [[ашо]]ла-[[ожо]]сто, тикшесь а пидиця. Цвети [[кизэ]]нть перть. Ундоксозо мода ланга ацавозь, касы ки чирева, кудо малава, навозов таркава. 
 
 Цецястонзо теезь чаесь лезэв козомсто. Од [[лопа]]нзо парсте молить [[Ярсамопель|ярсамо]], танстень коряс молить шпинат ланкс.
 
+== Тикшень лемтне ==
+* ({{Lang-lat|Ldmium L.}}, {{lang-ru| ''Яснотка''}})  - '''''пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Ldmium dlbum L.}}, {{lang-ru| ''Яснотка белая''}})  - '''''ашо пидипалакс'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5—7493—0433—7.,{{ref-ru}},{{ref-myv}}</ref>. 
+* ({{Lang-lat|Ldmium amplexicdule L.}}, {{lang-ru| ''Яснотка     стеблеобъемлющая''}}) 	'''''эчке     недькс    пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>.
+* ({{Lang-lat|Ldmium maculdtum (L.) L.}}, {{lang-ru| ''Яснотка крапчатая, или пятнистая''}})  - '''''тешксэв пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>.
+* ({{Lang-lat|Ldmium purpureum L.}}, {{lang-ru| ''Яснотка пурпурная''}}) - '''''пупоркав пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>.
+
 == Содамоёвкст ==
 
-== Сёрм: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
+
+== Сёрм.: ==
+<references />
 
 [[Категория:Биология|А]]
 [[Категория:Ормадо лезэвть|А]]
