*Empty MediaWiki Message*

--- a/А_пидиця_ашо_пиципалакс.mw
+++ b/А_пидиця_ашо_пиципалакс.mw
@@ -47,7 +47,7 @@
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Ldmium L.}}, {{lang-ru| ''Яснотка''}})  - '''''пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Ldmium dlbum L.}}, {{lang-ru| ''Яснотка белая''}})  - '''''ашо пидипалакс'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5—7493—0433—7.,{{ref-ru}},{{ref-myv}}</ref>. 
+* ({{Lang-lat|Ldmium dlbum L.}}, {{lang-ru| ''Яснотка белая''}})  - '''''ашо пидипалакс'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>. 
 * ({{Lang-lat|Ldmium amplexicdule L.}}, {{lang-ru| ''Яснотка     стеблеобъемлющая''}}) 	'''''эчке     недькс    пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>.
 * ({{Lang-lat|Ldmium maculdtum (L.) L.}}, {{lang-ru| ''Яснотка крапчатая, или пятнистая''}})  - '''''тешксэв пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>.
 * ({{Lang-lat|Ldmium purpureum L.}}, {{lang-ru| ''Яснотка пурпурная''}}) - '''''пупоркав пидипалакс'''''<ref name="Русско-эрзянский ботанический"/>.
