*Empty MediaWiki Message*

--- a/Умарина.mw
+++ b/Умарина.mw
@@ -39,9 +39,16 @@
 {{Лия смустьтне|Умарина (смустьтне)}}
 '''Умарина''' ({{lang-la|Málus}}) — те [[чувто]] прыцялопань буень чувттнэнь ды розацецянь куротнень ламбамо эли ризаня-ламбамо [[Эмежт|эмеж]] марто.
 
+== Тикшень лемтне ==
+* ({{Lang-lat|Malus Mill}}, {{lang-ru| ''Яблоня''}})  - '''''умарьчувто, умарькс'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Malus domestica Borkh.}}, {{lang-ru| ''Яблоня домашняя ''}})  - '''''садпиренъ умарьчувто'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>. 
+* ({{Lang-lat|Mdlus sylvestris (L)Mill.}}, {{lang-ru| ''Яблоня лесная''}})  - '''''вирень умарькс'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 == Эмеж (умарь) ==
 [[Артовкс:Fuji apple.jpg|thumb|right|250px|Умарь]]
+
+== Сёрм.: ==
+<references />
 
 {{stub}}
 
