--- a/Алкуксонь_шуж.mw
+++ b/Алкуксонь_шуж.mw
@@ -41,10 +41,15 @@
 }}
 ''Шуж'' ({{Lang-lat| ''Hordéum vulgáre''}}) — сюронь тикше. Сонзе озавтыть ярсамонть коряс ломанть.
 
+== Тикшень лемтне ==
+* ({{Lang-lat|Hordeum L.}}, {{lang-ru| ''Ячмень''}})  - '''''шуж'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>. 
+* ({{Lang-lat|Hordeum satirum}}, {{lang-ru| ''Ячмень посевной''}})  - '''''видема шуж'''''<ref name="Русско-эрзянский ботанический"/>. 
+
 == Содамоёвкст ==
 
-== Сёрм: ==
 
+== Сёрм.: ==
+<references />
 [[Категория:Биология|Ш]]
 [[Категория:Ярсамопель|Ш]]
 [[Категория:Сюрот|Ш]]
