*Empty MediaWiki Message*

--- a/Сирть.mw
+++ b/Сирть.mw
@@ -34,6 +34,12 @@
 
 '''Сирть''' ({{lang-la|Fraxinus}}, {{Lang-ru|Ясень}}) — те [[чувтт|чувто]],  Маслинань семиясто ({{lang-la|Oleaceae}}).
 
+== Чувтонть лемтне ==
+* ({{Lang-lat|Frаxinus excelsior L.}}, {{lang-ru| ''Ясень обыкновенный, или высокий''}})  - '''''сэрей сирть'''''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>. 
+
+== Сёрм.: ==
+<references />
+
 {{stub}}
 
 [[Категория:Лопав чувтт]]
