*Empty MediaWiki Message*

--- a/Сакалов_тикше.mw
+++ b/Сакалов_тикше.mw
@@ -39,7 +39,7 @@
 | grin             = 
 | ipni              = 
 }}
-'''Сакалов тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Setária}}, {{lang-ru| ''Щети́нник'' или '''Мыше́й'''}}) — вейкеиень [[тикше]]    Мятликовонь семиястонть (Poaceae).
+'''Сакалов тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Setária}}, {{lang-ru| ''Щети́нник'' или ''Мыше́й''}}) — вейкеиень [[тикше]]    Мятликовонь семиястонть (Poaceae).
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Sataria viridis (L.) Beauv.}}, {{lang-ru| ''Щетинник зеленый''}})  - '''''пиже сакалов тикше'''''<ref name="Русско-эрзянский ботанический"/>. 
