*Empty MediaWiki Message*

--- a/Куритиба.mw
+++ b/Куритиба.mw
@@ -5,15 +5,14 @@
 
 Эрицятнеде 1,828,092 тёж. ([[2008]] ие), покшолмазо 430.9 [[Вайгельпе|вп²]].
 
+== Фотокувт==
 <gallery>
 File:Bus Stops 3 curitiba brasil.jpg|<center>
 File:Museu Oscar Niemeyer 2 Curitiba Brasil.jpg|<center>
 File:Rua xv curitiba.jpg|<center>
 File:Southern Brazil in the Winter.jpg|<center>
 File:Universidade Federal do Parana 3 Curitiba Parana.jpg|<center>
-File:CasteloDoBatel.Curitiba.Parana.JPG|<center>
 File:Ópera de arame - Curitiba.jpg|<center>
-
 File:PacoDaLiberdadeCuritiba1.JPG|<center>
 File:ParkParqueTanguaCuritiba.jpg|<center>
 <center>
