*Empty MediaWiki Message*

--- a/Атякшонь_морамо.mw
+++ b/Атякшонь_морамо.mw
@@ -51,6 +51,9 @@
 [[Тумобуе]]нь Кабаево велесэ (Кобале) мерить ''кисканька''.
 == Содамоёвкст ==
 
+==Ловнодо==
+* [[Умбрав]]
+
 == Сёрм: ==
 * Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
 
