--- a/Марть.mw
+++ b/Марть.mw
@@ -10,7 +10,7 @@ I. Коське марть:
 :* лопанькондямо ({{lang-la|follículus}}).
 : 2. ''Пештенькондят эли вейкевидьметь''
 :* [[Пеште]], [[Пештине]] ([[Пештекс]], [[фундук]]);
-:* [[Сюро|cюрот]] 
+:* [[Сюрот (тикшеть)|cюрот]] 
 :* [[Ливтниця (видме)|ливтниця]] ([[укштор]]);
 :* [[серя]] ([[тумо]]);
 :* [[видьмекс]] ([[чиньжарамо]]).
@@ -24,7 +24,6 @@ II. Потьмежа марть:
 :* гранат кондят ([[Гранат (касовкс)|гранатань]] эмежть).
 : 2. Товонькондят:
 :* [[потьмежань тов]] ([[Атямарь (марь)|атямарь]], [[торла ]]);
-
 
 ==Кодат улить марьтне ==
 * [[Бокла]]  — (лиякс мерить: ''[[гроха]]'', {{Lang-ru|брюква<ref name="Сырнень човалят">Четвергов Е. Сырнень човалят: Стувтовозь ды чуросто вастневиця валт. — Саранск: Мордовской книжной издательствась, 1994. —208 с. — Эрзя. яз.  {{ref-myv}}, {{ref-ru}}</ref>}}) 
