*Empty MediaWiki Message*

--- a/Марть.mw
+++ b/Марть.mw
@@ -1,3 +1,4 @@
+[[Артовкс:Fruit trees עצי פרי (12).JPG|кенжешка|Марть]]
 '''Марть'''  ({{lang-la|fructus}}, {{lang-el|καρπός}}) — те меельце пень этапось цецянь, конасонть раштавить, касыть-теевить [[видьме]]ть. 
 Ламот мартне - молить ярсамо, ламотьне - ормадо лезэвть‎, кой-конат молить артома тевс.
 
