*Empty MediaWiki Message*

--- a/Овтоумарь.mw
+++ b/Овтоумарь.mw
@@ -43,7 +43,7 @@
 
 == Тикшень лемтне ==
 [[Артовкс:Hagebutte (Rosa canina).jpg|thumb|right|250px|Овтоумарень эмеж]]
-* ({{Lang-lat|Rosa L.}}, {{lang-ru| ''Шиповник майский''}})  - '''''панжиковонъ овтоумарь'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Rosa L.}}, {{lang-ru| ''Шиповник майский''}})  - '''''панжиковонь овтоумарь'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Rosa ru-biginosa L.}}, {{lang-ru| ''Шиповник ржаво-красный''}})  - '''''чопода-якстере тюсонь овтоумарь'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 ==Фотокувт ==
