*Empty MediaWiki Message*

--- a/Мушкотикше.mw
+++ b/Мушкотикше.mw
@@ -39,7 +39,7 @@
 | grin             = 11452
 | ipni              = 
 }}
-'''Мушкотикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Stachys}}, {{lang-ru| ''Чистец''}}) — ламоиень, вейкеиень [[тикше]]нь касовкст эли пелькуракшт Ясноткань семиястонть (Lamiáceae). 
+'''Мушкотикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Stachys}}, {{lang-ru| ''Чистец'', также ''Стахис''}}) — ламоиень, вейкеиень [[тикше]]нь касовкст эли пелькуракшт Ясноткань семиястонть (Lamiáceae). 
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Stdchys palustris L.}}, {{lang-ru| ''Чистец болотный''}})  - '''''чеядавксонь мушкотикше'''''<ref name="Русско-эрзянский ботанический"/>. 
